# StructSLAM

./: .gitignore  CMakeLists.txt  LICENSE  Note.md  README.md
backend/include/ygz/: BackendInterface.h  BackendSlidingWindowG2O.h
backend/src/: BackendSlidingWindowG2O.cpp
common/: CMakeLists.txt
common/include/ygz/: Camera.h  Feature.h  Frame.h  G2OTypes.h  MapPoint.h  Memory.h  NumTypes.h  Settings.h
common/src/: Frame.cpp  G2OTypes.cpp  MapPoint.cpp  Memory.cpp  Settings.cpp
cv/: CMakeLists.txt
cv/include/ygz/: Align.h  DSOCoarseTracker.h  LKFlow.h  LineFeature.h  MinimalImage.h  ORBExtractor.h  ORBMatcher.h  PixelSelector.h  SparePoint.h  Tracker.h
cv/src/: Align.cpp  DSOCoarseTracker.cpp  LKFlow.cpp  LineFeature.cpp  LineFeature.h  ORBExtractor.cpp  ORBMatcher.cpp  PixelSelector.cpp  SparePoint.cpp  Tracker.cpp
test/: CMakeLists.txt  testCoarseTracker.cpp  testFeatureExtraction.cpp  testFeatureMatching.cpp  testLineMatch.cpp  testLocalBA.cpp  testLocalBAWithIMU.cpp  testPureVision.cpp  testStereoDSO.cpp  testStereoInit.cpp  testStereoInit.cpp.wj  testStereoInitSim.cpp  testStereoMatching.cpp  testViewer.cpp  test_g2o_line.cpp
util/: CMakeLists.txt
util/include/ygz/: KittiReader.h  Viewer.h  getElement.h
util/src/: KittiReader.cpp  Viewer.cpp  getElement.cpp
